--- a/apps/argo-performance-45.yml
+++ b/apps/argo-performance-45.yml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: {{name}}
+  name: argo-performance-45
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
