--- a/templates/project.template
+++ b/templates/project.template
@@ -23,16 +23,16 @@ spec:
   - namespace: '*'
     server: '*'
   
-  syncWindows:
-  - duration: 24h
-    kind: deny
-    schedule: 0 0 * * *
-    namespaces:
-    - '*'
-    applications:
-    - '*'
-    clusters:
-    - '*'
+  # syncWindows:
+  # - duration: 24h
+  #   kind: deny
+  #   schedule: 0 0 * * *
+  #   namespaces:
+  #   - '*'
+  #   applications:
+  #   - '*'
+  #   clusters:
+  #   - '*'
 
   clusterResourceWhitelist:
   - group: "*"
